# IMSControl2026

./: .gitignore  Launch-IMSControl.cmd  README.md  Update-IMSControl.cmd  activate_window.py  bring_to_front.ps1  bring_window_to_front.py  main.py  pyproject.toml  requirements.txt  setup_env.bat  swept_vsims_timing_diagnostics.txt  test_gui.py
.github/: copilot-instructions.md
src/ims_control/: __init__.py  main.py
src/ims_control/acquisition/: __init__.py  daq_cli.py  hv_cli.py  worker_thread.py
src/ims_control/data_model/: __init__.py  experiment.py
src/ims_control/hardware/: __init__.py  daq_interface.py
src/ims_control/io/: __init__.py  export_import.py
src/ims_control/processing/: __init__.py  aggregator.py
src/ims_control/ui/: __init__.py  config_dialog.py  hv_config_dialog.py  main_window.py
tests/: test_ftims_acquisition.py  test_ftims_config.py  test_ftims_integration_e2e.py
